[package]
name = "waitz"
version = "0.3.0"
authors = ["Max Strübing <mxstrbng@gmail.com>"]
edition = "2018"
description = "Waits (retries) a command until it exits with 0"
repository = "https://github.com/mstruebing/waitz"
homepage = "https://github.com/mstruebing/waitz"
license = "MIT"
categories = ["command-line-utilities", "development-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
